Fixed layout of toggle switch. Corrected other layout problems

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,18 @@
+.container {
+  display: flex;
+  margin: 0 3rem;
+  padding: 2rem 0;
+}
+.dummyContainer {
+  flex: 4;
+}
+
+.toggleSwitch {
+  margin-top: 100px;
+}
+
 ul {
+  flex: 1;
   display: flex;
   list-style: none;
   margin: 0;
@@ -7,8 +21,8 @@ ul {
 
 li {
   text-align: center;
+  margin: 1rem;
   flex: 1;
-  padding-top: 3rem;
 }
 
 li a {
@@ -21,13 +35,4 @@ li a:hover {
 }
 
 @media screen and (min-width: 960px) {
-  li {
-    flex: 0;
-    margin: 1rem;
-    padding-top: 2rem;
-  }
-
-  ul {
-    padding-left: 2rem;
-  }
 }
